fixing the centering of image galleries on firefox // #170

--- a/web/layout/gallery/collage.less
+++ b/web/layout/gallery/collage.less
@@ -8,17 +8,24 @@
 @clip_path:     %(@clip_path_format, @size, @size *2, @size, @size, @size *2, @size, @size);
 @clip_path_min: %(@clip_path_format, @smin, @smin *2, @smin, @smin, @smin *2, @smin, @smin);
 
+div.photos-outer
+{
+    position: absolute;
+}
+
 div.photos
 {
     background-color: #282828;
 
     position: absolute;
     top: @top_pos;
-    left: 0;
-    right: 0;
+
+    left: 50%;
+    transform: translate(-50%, 0%);
 
     margin: 0;
     min-height: 100vh;
+    display: grid;
     place-items: center;
 }
 
