--- a/web/layout/gallery/gallery.less
+++ b/web/layout/gallery/gallery.less
@@ -14,11 +14,12 @@ div.photos
 
     z-index: 1;
 
-    left: 0;
-    right: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
 
     margin: 0;
     min-height: 100vh;
+    display: grid;
     place-items: center;
 }
 
